# QUEST

./: .gitignore  CLAUDE.MD  README.md  pyproject.toml  requirements.txt  setup.py
configs/: base.yaml  msvd.yaml  nextqa.yaml  nextqa_kaggle.yaml
docs/: architecture.md  contributing.md  kaggle_guide.md  setup_guide.md
scripts/: build_index.py  demo.py  evaluate.py  extract_frames.sh  train_ranker.py
src/data/: dataset.py  frame_extractor.py  preprocess.py
src/evaluation/: evaluator.py  metrics.py
src/models/: clip_encoder.py  dpp_selector.py  temporal_ranker.py  vlm_interface.py
src/ranking/: adaptive_budget.py  fine_ranker.py
src/retrieval/: coarse_retriever.py  faiss_index.py
src/utils/: config.py  io_utils.py  logger.py  visualization.py
tests/test_ranking/: test_dpp_selector.py
tests/test_retrieval/: test_faiss_index.py
