[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quest-videoqa"
version = "0.1.0"
description = "Query-guided Efficient Segment Selection for Long-Video QA"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.37.0",
    "open-clip-torch>=2.23.0",
    "faiss-cpu>=1.7.4",
    "bitsandbytes>=0.41.0",
    "ffmpeg-python>=0.2.0",
    "opencv-python-headless>=4.8.0",
    "scenedetect[opencv]>=0.6.2",
    "datasets>=2.16.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipykernel>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
